<resources>
    <!-- General Strings -->
    <string name="app_name">Meet^</string>
    <string name="USERS_FILENAME">user_file</string>

    <!-- Database Strings -->
    <string name="db_chats">chats</string>
    <string name="db_groups">groups</string>
    <string name="db_users">users</string>

    <!-- URL Params -->
    <string name="db_userUid">userUid</string>
    <string name="db_groupUid">groupUid</string>

    <!-- Chat properties -->
    <string name="prop_chat_message">message</string>
    <string name="prop_chat_senderUid">senderUid</string>
    <string name="prop_chat_timestamp">timestamp</string>

    <!-- Group Properties -->
    <string name="prop_group_lastActivity">activity</string>
    <string name="prop_group_creator">creator</string>
    <string name="prop_group_allowsInvites">invite</string>
    <string name="prop_group_members">members</string>
    <string name="prop_group_public">public</string>
    <string name="prop_group_timestamp">timestamp</string>
    <string name="prop_group_title">title</string>
    
    <!-- User Properties -->
    <string name="prop_user_avatar">avatar</string>
    <string name="prop_user_email">email</string>
    <string name="prop_user_name">name</string>
    <string name="prop_user_tokens">tokens</string>
    
    <!-- Activity Login -->
    <string name="prompt_email">Phone Number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in with Facebook</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Activity Main -->

    <!-- Fragment Find Event -->
    <string name="fragment_findevent_name">findEvent</string>
    <string name="no_events">Network Error</string>
    <string name="recommended_events">Recommended for you:</string>
    <string name="friend_events">Your friends\' events:</string>

    <!-- Fragment Group -->
    <string name="fragment_group_name">group</string>
    <string name="group_chat_hint">Write a message&#8230;</string>

    <!-- Fragment Group List -->
    <string name="fragment_grouplist_name">groupList</string>
    <string name="join_button">Join Group</string>
    <string name="accept_button">Accept</string>
    <string name="deny_button">Deny</string>
    <string name="no_groups">You have no groups.</string>

    <!-- Fragment Group Settings -->
    <string name="fragment_groupsettings_name">groupSettings</string>
    <string name="invite_button">Invite Friends</string>
    <string name="leave_button">Leave Group</string>
    <string name="delete_button">Delete</string>
    <string name="save_button">Save Changes</string>

    <!-- Fragment Invite -->
    <string name="fragment_invite_name">invite</string>
    <string name="invite_url">https://us-central1-meet-c7395.cloudfunctions.net/inviteList</string>
    <string name="no_users">No users found</string>
    <string name="add_users">Add users to group</string>

    <!-- Fragment Make Group -->
    <string name="fragment_makegroup_name">makeGroup</string>
    <string name="make_group_hint">Group Name</string>
    <string name="public_label">Make Group Public?</string>
    <string name="invite_label">Allow Friends to Invite?</string>
    <string name="create_group_label">Create Group</string>

    <!-- Card Chat -->

    <!-- Card Group -->

</resources>
